@@ -1,0 +1,2 @@
+/path/readme.pod
+-c -t 'Basic Information'
