@@ -1,0 +1,3 @@
+/path/script
+
+/~eagle/styles/script.css
