@@ -1,0 +1,2 @@
+format: pod
+path: /path/Module.pm
