@@ -1,0 +1,6 @@
+format: pod
+options:
+  contents: true
+  navbar: false
+path: /path/readme.pod
+title: Basic Information
