@@ -1,0 +1,3 @@
+format: pod
+path: /path/script
+style: /~eagle/styles/script.css
